tamaños de cajas

--- a/src/app/Componentes/pages/inicio/inicio.component.html
+++ b/src/app/Componentes/pages/inicio/inicio.component.html
@@ -1,65 +1,69 @@
+
+
+
 <section id="banner">
-  <img src="..." class="img-fluid" alt="...">
+  <img src="../../../../assets/IMG/Olivia Wilson.png" class="img-fluid" alt="...">
 </section>
-<section id="img">
+<section id="img" style="margin-top: 3%;">
   <div class="container text-center">
     <div class="row">
       <div class="col">
         <div class="card" style="width: 18rem;">
-          <img src="..." class="card-img-top" alt="...">
+          <img src="../../../../assets/IMG/descarga.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">Cafe uno</h5>
+            <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem tempore adipisci, porro suscipit corrupti expedita dolorum eligendi cum impedit deserunt illum veniam natus maxime blanditiis, consequatur fuga harum incidunt perspiciatis!</p>
+            <a href="#" class="btn btn-success">Acceder</a>
           </div>
         </div>
       </div>
       <div class="col">
         <div class="card" style="width: 18rem;">
-          <img src="..." class="card-img-top" alt="...">
+          <img src="../../../../assets/IMG/2.jfif" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">Cafe uno</h5>
+            <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem tempore adipisci, porro suscipit corrupti expedita dolorum eligendi cum impedit deserunt illum veniam natus maxime blanditiis, consequatur fuga harum incidunt perspiciatis!</p>
+            <a href="#" class="btn btn-primary">Acceder</a>
           </div>
         </div>
       </div>
       <div class="col">
         <div class="card" style="width: 18rem;">
-          <img src="..." class="card-img-top" alt="...">
+          <img src="../../../../assets/IMG/OIP.jfif " class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">Cafe uno</h5>
+            <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem tempore adipisci, porro suscipit corrupti expedita dolorum eligendi cum impedit deserunt illum veniam natus maxime blanditiis, consequatur fuga harum incidunt perspiciatis!</p>
+            <a href="#" class="btn btn-primary">Acceder</a>
           </div>
         </div>
       </div>
     </div>
   </div>
 </section>
+
 <section id="cartas">
   
   <div class="container text-center">
     <div class="row">
-      <div class="col" style="width: 45%; background-color: black;">
-        <div class="card" style="width: 18rem;">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
+      <div style="width: 30%;; background-color: black;">
+        <div class="card" style="width: 18rem; background-color: black;">
+          <div class="card-body" style="color: aliceblue;">
+            <h5 class="card-title">Titulo 1</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat ullam recusandae reprehenderit facilis aliquid cupiditate! Porro aliquam fugiat illo, in aperiam consequuntur sint, doloremque, voluptatibus exercitationem eligendi distinctio omnis animi!</p>
+
+            
           </div>
         </div>
       </div>
-      <div class="col" style="width: 45%; background-color: red;">
-        <div class="card" style="width: 18rem;">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
+      <!--COMENTARIOS-->
+      <div class="col" style="background-color: red;">
+        <div class="card" style="width:90%; background-color: red;">
+          <div class="card-body" style="color: aliceblue;">
+            <h5 class="card-title">Titulo 1</h5>
+        
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores assumenda atque perspiciatis deserunt? Deleniti maxime, ad officia ducimus nostrum optio ipsam quaerat doloribus tempora ut voluptates obcaecati sed facere nesciunt.</p>
+
+            
           </div>
         </div>  
       </div>
@@ -76,15 +80,12 @@
           </div>
         </div>
       </div>
-      <div class="col" style="width: 45%; background-color: black;">
+      <div class="col" style="width: 45%; background-color: red;">
         <div class="card" style="width: 18rem;">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
-          </div>
+            <h5 class="card-title">Titulo dos</h5>
+            <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti est nostrum optio nemo, saepe, quod vel facere, temporibus aspernatur sint quia. Itaque quis consequuntur vel dolor quam incidunt doloribus voluptatem?</p>
+            </div>
         </div>
       </div>
     </div>
