--- a/src/app/Componentes/navbar/navbar.component.html
+++ b/src/app/Componentes/navbar/navbar.component.html
@@ -13,6 +13,9 @@
           <a class="nav-link active" aria-current="page" routerLink="/Galeria">Galeria</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link active" aria-current="page" routerLink="/Datos">Datos</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">Mapa</a>
         </li>
       </ul>
