--- a/src/app/Componentes/pages/datos/datos.component.html
+++ b/src/app/Componentes/pages/datos/datos.component.html
@@ -1,8 +1,22 @@
-<div class="card" style="width: 18rem;">
-    <img src="..." class="card-img-top" alt="...">
-    <div class="card-body" *ngFor="let">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
-    </div>
-  </div>
+
+<table class="table" style="width: 80%; margin: 2% 10% 0 10%;">
+  <thead>
+    <tr>
+      <th scope="col">ID</th>
+      <th scope="col">Nombre</th>
+      <th scope="col">Latitud</th>
+      <th scope="col">Longitud</th>
+      <th scope="col">Detalle</th>
+    </tr>
+  </thead>
+  <tbody *ngFor="let item of CafeteriasList" >
+    <tr>
+      <th scope="row">{{item.ID}}</th>
+      <td>{{item.Name}}</td>
+      <td>{{item.Lat}}</td>
+      <td>{{item.Long}}</td>
+      <th class="buttom">Ver</th>
+    </tr>
+  
+  </tbody>
+</table>
