--- a/src/app/Componentes/pages/datos/datos.component.html
+++ b/src/app/Componentes/pages/datos/datos.component.html
@@ -15,8 +15,13 @@
       <td>{{item.Name}}</td>
       <td>{{item.Lat}}</td>
       <td>{{item.Long}}</td>
-      <th class="buttom">Ver</th>
+      <td class="btn btn-primary" (click)="Detalle(item.ID)">Detalle</td>
     </tr>
   
   </tbody>
 </table>
+
+
+
+
+
